
10-10-2023: Store the swapchain format/colorspace in ImGui Vulkan init info, so the GUI buffer will be consistent as UHE swap chain.
Finished setting dialog ImGui porting.

15-10-2023: Finished profile dialog ImGui porting. Stores all dialogs as pointer instead an instance.
19-10-2023: Finished world dialog ImGui porting. Refactored all -1 to UHINDEXNONE (-1 as well).
Finished detail dialog ImGui porting.
20-10-2023: Finished texture dialog ImGui porting.

23-10-2023: Started the EXR texture import implementation. Organized both Vulkan/FBX SDK to the ThirdParty folder too.
24-10-2023: Added support for EXR images. Let texture editor automatically correct the linear/compression setting consistency.
Two bugs to solve: 
(1) Stack overflow in release editor when importing EXR. (Fixed)
(2) Can't switch after creation. (Fixed)
Removed unnecessary reverse of motion translucent bundles.

25-10-2023: Customized texture formats and replaced most VkFormat parameter as UHTextureFormat.
Merged world and detail GUI and always display it in editor mode. Still need to find a way of hiding resize grip of ImGui window.
Improved release build render thread efficiency.
Started trying the engine on other hardwares. Though it can run on my integrated GPU, but parallel submission is a problem.
BindDescriptor() might be only called once after BeginPass(), need to try this tomorrow.

26-10-2023: Solved parallel submission issue by SetViewport/ScissorRect in the secondary commands, that's necessary.
Still an issue there when BeginRenderPass() is called for MotionOpaquePassObj, the RT gets cleared despite it's LOAD_OP_LOAD!
Looks like it's a first-chance error for AMD integrated GPU, if I skip camera motion draw intentionally, the sky pass result gets cleared...
Now I simply workaround the issue.

27-10-2023: Started to add BC6H compression. Got a preliminary result, I should be close to the proper implemenation.

28-10-2023: Finished BC6H compression.