@@ -36,9 +36,9 @@ Size=294,475
 Collapsed=0
 
 [Window][Texture Editor]
-ViewportPos=41,69
+ViewportPos=79,50
 ViewportId=0x7361E594
-Size=2023,944
+Size=2096,1191
 Collapsed=0
 
 [Window][Texture Creation]
@@ -48,8 +48,8 @@ Size=734,189
 Collapsed=0
 
 [Table][0xF5C0C183,2]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
+Column 0  Weight=0.6822
+Column 1  Weight=1.3178
 
 [Table][0xCCE807EF,2]
 Column 0  Weight=1.0000
